--- a/starterFiles/templates/index.html
+++ b/starterFiles/templates/index.html
@@ -2,15 +2,21 @@
 <html>
     <head>
         <title>Grocery List</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+        <script type="text/javascript" src="{{ url_for('static', filename='js/main.js')}}"></script>
     </head>
     <body>
+    <!-- LOGO -->
+    <div>
+        <img SRC="https://raw.githubusercontent.com/MariyaSha/groceriesList/main/logo_black.png" alt="grocery app logo">
+    </div>
     <div id="remove_items">
         <form action ="/remove_items" method="post">
             {% for item in shopping_items%}
-            <input type="checkbox" name="check" id="{{item}}" value="{{item}}">
+            <input type="checkbox" name="check" id="{{item}}" value="{{item}}" onchange="check_me('{{ item }}')">
             <label for="{{items}}" name="{{item}}">{{ item }}</label><br>
             {% endfor %}
-            <input type="submit" value="REMOVE ITEMS">
+            <input type="submit" value="CHECK ITEMS" id="remove_btn">
         </form>
     </div>
         <div id = "add item">
@@ -19,7 +25,9 @@
                     {% for item in all_items %}
                     <option value="{{ item }}">{{ item }}</option>
                     {% endfor %}
-                    <input type="submit" value="ADD ITEM">
+
+                </select>
+                <input type="submit" value="ADD ITEM" id="add_btn">
             </form>
         </div>
 
