--- a/starterFiles/static/css/main.css
+++ b/starterFiles/static/css/main.css
@@ -23,7 +23,7 @@ label{
     background-color: #01A88A;
     color: white;
     font-weight: bold;
-    border-radius: 20px
+    border-radius: 20px;
     border: 2px solid white;
     margin: 10px;
     padding: 10px 15px;
@@ -34,7 +34,7 @@ label{
     background-color: lightgray;
     color: black;
     font-weight: bold;
-    border-radius: 20px
+    border-radius: 20px;
     border: 2px solid white;
     margin: 10px;
     padding: 10px 15px;
